@@ -112,7 +112,7 @@ limitations under the License.
       <label for="custom_parameters">
         <a rel="help">Custom Parameters</a>
       </label>
-      <input type="text" id="custom_parameters" value="">
+      <input type="text" id="custom_parameters" value="" placeholder="key1=val1&amp;key2=val2">
 
       <button type="submit">Execute Import</button>
     
